@@ -1,5 +1,6 @@
 From ucommon 2.1.1 to 2.1.2
 - set() methods for date, time, and datetime added.
+- new defines for buffer sizes added.
 
 From ucommon 2.1.0 to 2.1.1
 - fix for Time string conversion
